@startuml orphanage_real_schema
!theme plain
' Светлая академическая тема
skinparam backgroundColor #ffffff
skinparam defaultFontColor #333333
skinparam defaultFontSize 12
skinparam ArrowColor #666666
skinparam ArrowThickness 1.5
skinparam nodesep 50
skinparam ranksep 60

skinparam class {
  BackgroundColor #f8f9fa
  BorderColor #6c757d
  HeaderBackgroundColor #e9ecef
  FontColor #212529
  AttributeFontColor #495057
}

skinparam package {
  BackgroundColor #ffffff
  BorderColor #adb5bd
  FontColor #495057
  FontStyle bold
}

' Направление сверху вниз
top to bottom direction

' ═══════════════════════════════════════════════
'  TABLES
' ═══════════════════════════════════════════════

class "staff.users" as users {
    + id : UUID <<PK>>
    --
    username : VARCHAR(100) <<UQ>>
    email    : VARCHAR(255) <<UQ>>
    phone    : VARCHAR(20)
    role     : VARCHAR(20)
    avatar_url : VARCHAR(255)
    is_enabled : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "staff.staff" as staff_table {
    + id : BIGSERIAL <<PK>>
    --
    first_name : VARCHAR(100)
    last_name  : VARCHAR(100)
    middle_name : VARCHAR(100)
    position   : VARCHAR(100)
    email      : VARCHAR(200)
    phone      : VARCHAR(20)
    status     : VARCHAR(30)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "staff.volunteers" as volunteers {
    + id : BIGSERIAL <<PK>>
    # user_id : UUID <<FK>>
    --
    skills          : TEXT
    experience      : TEXT
    available_days  : VARCHAR(100)
    status          : VARCHAR(50)
    registration_date : DATE
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "staff.shelter_events" as shelter_events {
    + id : BIGSERIAL <<PK>>
    # created_by : UUID <<FK>>
    --
    title            : VARCHAR(200)
    description      : TEXT
    event_date       : TIMESTAMP
    location         : VARCHAR(255)
    max_participants : INTEGER
    image_url        : VARCHAR(255)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "staff.event_registrations" as event_registrations {
    + id : BIGSERIAL <<PK>>
    # event_id : BIGINT <<FK>>
    --
    user_id     : UUID
    name        : VARCHAR(100)
    email       : VARCHAR(255)
    phone       : VARCHAR(20)
    notes       : TEXT
    registered_at : TIMESTAMP
  }

  class "staff.staff_schedules" as staff_schedules {
    + id : BIGSERIAL <<PK>>
    # staff_member_id : BIGINT <<FK>>
    --
    work_date    : DATE
    shift_start  : TIME
    shift_end    : TIME
    role_playing_slot : VARCHAR(50)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "staff.articles" as articles {
    + id : BIGSERIAL <<PK>>
    # author_id : UUID <<FK>>
    --
    title        : VARCHAR(255)
    summary      : TEXT
    content      : TEXT
    category     : VARCHAR(50)
    is_published : BOOLEAN
    published_at : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "children.children" as children {
    + id : BIGSERIAL <<PK>>
    --
    first_name     : VARCHAR(100)
    last_name      : VARCHAR(100)
    middle_name    : VARCHAR(100)
    birth_date     : DATE
    gender         : VARCHAR(10)
    status         : VARCHAR(30)
    room_number    : VARCHAR(10)
    admission_date : DATE
    image_url      : VARCHAR(500)
    description    : TEXT
    health_notes   : TEXT
    education_notes : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "children.child_medical_records" as medical_records {
    + id : BIGSERIAL <<PK>>
    # child_id : BIGINT <<FK>>
    --
    record_date  : DATE
    record_type  : VARCHAR(50)
    description  : TEXT
    diagnosis    : VARCHAR(255)
    treatment    : TEXT
    created_by   : UUID
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "children.education_records" as education_records {
    + id : BIGSERIAL <<PK>>
    # child_id : BIGINT <<FK>>
    --
    subject      : VARCHAR(100)
    grade        : VARCHAR(20)
    performance_note : TEXT
    academic_date : DATE
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "children.psychologist_logs" as psychologist_logs {
    + id : BIGSERIAL <<PK>>
    # child_id : BIGINT <<FK>>
    --
    session_date  : DATE
    session_notes : TEXT
    psychologist_name : VARCHAR(200)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "children.legal_statuses" as legal_statuses {
    + id : BIGSERIAL <<PK>>
    # child_id : BIGINT <<FK>>
    --
    status_type         : VARCHAR(50)
    guardianship_status : VARCHAR(50)
    document_number     : VARCHAR(100)
    property_rights_note : TEXT
    registration_address : VARCHAR(255)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "inventory.shelter_needs" as shelter_needs {
    + id : BIGSERIAL <<PK>>
    --
    item_name        : VARCHAR(200)
    description      : TEXT
    category         : VARCHAR(50)
    quantity_current : INTEGER
    quantity_needed  : INTEGER
    priority         : VARCHAR(50)
    price            : DECIMAL(10,2)
    expiry_date      : DATE
    status           : VARCHAR(30)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "inventory.suppliers" as suppliers {
    + id : BIGSERIAL <<PK>>
    --
    name           : VARCHAR(200)
    contact_person : VARCHAR(200)
    phone_number   : VARCHAR(20)
    address        : TEXT
    rating         : DECIMAL(3,1)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "inventory.procurement_requests" as procurement_requests {
    + id : BIGSERIAL <<PK>>
    # supplier_id : BIGINT <<FK>>
    --
    item_category    : VARCHAR(50)
    description      : TEXT
    requested_quant  : INTEGER
    estimated_budget : DECIMAL(10,2)
    status           : VARCHAR(30)
    approval_date    : DATE
    received_date    : DATE
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "inventory.donations" as donations {
    + id : UUID <<PK>>
    --
    user_id        : UUID
    amount         : DECIMAL(10,2)
    payment_method : VARCHAR(50)
    transaction_id : VARCHAR(100)
    status         : VARCHAR(50)
    created_at : TIMESTAMP
  }

  class "inventory.material_help" as material_help {
    + id : UUID <<PK>>
    # need_id : BIGINT <<FK>>
    --
    user_id    : UUID
    quantity   : INTEGER
    status     : VARCHAR(50)
    created_at : TIMESTAMP
  }

  class "adoption.adoption_requests" as adoption_requests {
    + id : BIGSERIAL <<PK>>
    --
    child_id               : BIGINT
    user_id                : UUID
    applicant_first_name   : VARCHAR(100)
    applicant_last_name    : VARCHAR(100)
    applicant_middle_name  : VARCHAR(100)
    applicant_phone        : VARCHAR(20)
    applicant_email        : VARCHAR(200)
    request_type           : VARCHAR(30)
    status                 : VARCHAR(30)
    submission_date        : DATE
    decision_date          : DATE
    message                : TEXT
    admin_comment          : TEXT
    curator_staff_id       : BIGINT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "adoption.happy_stories" as happy_stories {
    + id : UUID <<PK>>
    --
    child_id     : BIGINT
    story_text   : TEXT
    author_id    : UUID
    is_anonymous : BOOLEAN
    published_at : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
  }

  class "notification.notification_logs" as notification_logs {
    + id : BIGSERIAL <<PK>>
    --
    recipient_email  : VARCHAR(255)
    type             : VARCHAR(50)
    description      : TEXT
    status           : VARCHAR(30)
    error_message    : TEXT
    sent_at          : TIMESTAMP
    created_at : TIMESTAMP
  }

  class "notification.nutrition_norms" as nutrition_norms {
    + id : BIGSERIAL <<PK>>
    --
    age_group    : VARCHAR(50)
    calories_per_day : DECIMAL(8,2)
    proteins_grams : DECIMAL(8,2)
    fats_grams   : DECIMAL(8,2)
    carbs_grams  : DECIMAL(8,2)
    calories     : DECIMAL(8,2)
    created_at : TIMESTAMP
  }

' ═══════════════════════════════════════════════
'  RELATIONSHIPS
' ═══════════════════════════════════════════════

' staff internal
users         "1" -- "0..*" volunteers
users         "1" -- "0..*" shelter_events
users         "1" -- "0..*" articles
shelter_events "1" -- "0..*" event_registrations
staff_table   "1" -- "0..*" staff_schedules

' children internal
children      "1" -- "0..*" medical_records
children      "1" -- "0..*" education_records
children      "1" -- "0..*" psychologist_logs
children      "1" -- "0..*" legal_statuses

' inventory internal
suppliers     "1" -- "0..*" procurement_requests
shelter_needs "1" -- "0..*" material_help

' cross-schema (logical, no FK constraint)
children      ..> adoption_requests  : child_id
children      ..> happy_stories      : child_id
users         ..> adoption_requests  : user_id
users         ..> happy_stories      : author_id
users         ..> donations          : user_id
users         ..> material_help      : user_id
users         ..> event_registrations : user_id
@enduml
